@@ -105,6 +105,12 @@ VALID_USERS[eval,string]=$USER,$RUNUSER,nobody
 # Run solutions in a chroot environment? (gives better security)
 USE_CHROOT=1
 
+# Optional script to run for creating/destroying chroot environment,
+# leave empty to disable. The default script can be used to support
+# Sun Java with a chroot (edit the script first!).
+#CHROOT_SCRIPT[eval,string]=$SYSTEM_ROOT/judge/chroot-startstop.sh
+CHROOT_SCRIPT[eval,string]=
+
 # Maximum seconds available for compiling
 COMPILETIME=30
 
