@@ -7,11 +7,12 @@
 # a shell script to run it with the java interpreter later.
 #
 # NOTICE: this compiler script cannot be used with the USE_CHROOT
-# configuration option turned on! (Unless proper preconfiguration of
-# the chroot environment has been taken care of.)
+# configuration option turned on, unless proper preconfiguration of
+# the chroot environment has been taken care of!
 
 SOURCE="$1"
 DEST="$2"
+MEMLIMIT="$3"
 
 # Sun java needs filename to match main class:
 MAINCLASS=Main
@@ -33,13 +34,20 @@ if [ ! -f "$TMP.class" ]; then
 	exit 1
 fi
 
+# Calculate Java program memlimit as MEMLIMIT - max. JVM memory usage:
+MEMLIMITJAVA=$((MEMLIMIT - 204800))
+
 # Write executing script:
+# Executes java byte-code interpreter with following options
+# -Xmx: maximum size of memory allocation pool
+# -Xrs: reduces usage signals by java, because that generates debug
+#       output when program is terminated on timelimit exceeded.
 cat > $DEST <<EOF
 #!/bin/bash
 # Generated shell-script to execute java interpreter on source.
 
 cd $SOURCEDIR
-exec java $MAINCLASS
+exec java -Xrs -Xmx${MEMLIMITJAVA}k $MAINCLASS
 EOF
 
 chmod a+x $DEST
